    
    Changelog from MyCollab 4.3.1
    =============================
    Improvements
        - Update Japanese localization
        - Upgrade Jasypt library up to 1.9.2
        - Upgrade Vaadin to 7.2.5
        - Upgrade Spring framework to 4.0.6.RELEASE
        - Add the generic search module by using Solr
        - Add permission review when user select role
        
    Bug Fixes
        - Add more tracked fields in version notification email.
        - Fixed NPE when browser cookie is disabled.
        - Fixed bug view render wrongly in some rare cases.
        - Fixed overflow tooltip title if it is too long
        - Minor bug fix of project activity stream
        - Fixed confirm dialog body text size calculation wrongly
        - Validate email fails in several email formats
        - Fix bug view layout display wrongly in several cases
        - Email misspelling
    
    
    Changelog from MyCollab 4.3.0
    =============================
    Improvements
        - Upgrade Reflections to 0.9.9-RC2
        - Upgrade Guava to 15.0
        - Support Japanese in reporting
        - Internalization reporting module
        - Improve UIs
        - Update mobile edition
    
    Bug Fixes
        - Can not save user in some special case
        - Minor bug fixes in inviting project member
        - Can not assign new role to project member
        - Notification Dialog has useless header
        - Minor UI bugs on IE
        - Can not 'remember password' in IE
    
    
    Changelog from MyCollab 4.2.0
    =============================
    Improvements
        - Upgrade Vaadin to 7.2.4
        - Upgrade HirakiCP to 4.2.0
        - Update mobile edition
        - Improve Gantt chart display 
        - Add Simple view of phase
        - Support Japanese localization
        - Emails are localized per language
        - Support lazy load view
        - Allow user can select the default system language