@@ -45,7 +45,6 @@ public enum OpportunityI18nEnum {
 	FORM_TYPE,
 	FORM_LEAD_SOURCE,
 	FORM_CAMPAIGN_NAME,
-	FORM_ASSIGN_USER,
 	FORM_NEXT_STEP,
 	
 	MAIL_CREATE_ITEM_SUBJECT,
