@@ -53,7 +53,7 @@ BUTTON_NAV_NEWER=もっと次
 BUTTON_NAV_OLDER=もっと前
 TABLE_SELECTED_ITEM_TITLE=選択された：{0}
 FORM_DESCRIPTION=説明
-FORM_ASSIGNEE=譲受人
+FORM_ASSIGNEE=責任者
 FORM_CREATED_TIME=作成時間
 FORM_LAST_UPDATED_TIME=最終更新時間
 FORM_LAST_ACCESSED_TIME=最後アクセスした時間
