@@ -17,7 +17,7 @@ ITEM_CREATED_DATE=作成: {0}
 ITEM_UPDATED_DATE=更新した: {0}
 SUB_INFO_PEOPLE=人々
 ITEM_CREATED_PEOPLE=作成: 
-ITEM_ASSIGN_PEOPLE=譲受人: 
+ITEM_ASSIGN_PEOPLE=責任者: 
 BUTTON_CREATE=作成
 BUTTON_NEW_NOTE=新規備考
 BUTTON_REPLY=返信
