@@ -19,7 +19,6 @@ FORM_SOURCE=Source
 FORM_TYPE=Type
 FORM_LEAD_SOURCE=Lead Source
 FORM_CAMPAIGN_NAME=Campaign Name
-FORM_ASSIGN_USER=Assignee
 FORM_ACCOUNT_NAME=Account
 FORM_NEXT_STEP=Next Step
 
