@@ -15,7 +15,6 @@ FORM_SOURCE=ソース
 FORM_TYPE=タイプ
 FORM_LEAD_SOURCE=見込み顧客（リード）の源
 FORM_CAMPAIGN_NAME=キャンペーン名
-FORM_ASSIGN_USER=譲受人
 FORM_ACCOUNT_NAME=アカウント
 FORM_NEXT_STEP=次のステップ
 MAIL_CREATE_ITEM_SUBJECT={0}が新規機会 {1}を作成した
