@@ -1,7 +1,7 @@
 DASHBOARD=ダッシュボード
 MESSAGES=メッセージ
 RISKS=危機性
-PHASES=フェーズ
+PHASES=工程
 PROBLEMS=問題
 TASKS=タスクの割り当て
 BUGS=バグ
@@ -21,9 +21,9 @@ FRA_TASKGROUP_EDIT=タスクグループの編集：{0}
 FRA_TASK_NEW=新規タスク
 FRA_TASK_READ=タスク： {0}
 FRA_TASK_EDIT=タスク編集： {0}
-FRA_PHASE_NEW=新規フェーズ
-FRA_PHASE_READ=フェーズ： {0}
-FRA_PHASE_EDIT=フェーズ編集： {0}
+FRA_PHASE_NEW=新規工程
+FRA_PHASE_READ=工程： {0}
+FRA_PHASE_EDIT=工程編集： {0}
 FRA_BUG_DASHBOARD=バグのダッシュボード
 FRA_BUG_LIST=リスト
 FRA_BUG_NEW=新規バグ
