@@ -12,7 +12,7 @@ ERROR_WONT_FIX_EXPLAIN_REQUIRE_MSG=解決されない理由などをコメント
 WIDGET_CHARTS_TITLE=チャート
 WIDGET_RECENT_BUGS_TITLE=最近のバグ
 WIDGET_UNRESOLVED_BY_PRIORITY_TITLE=未解決：優先度によって
-WIDGET_UNRESOLVED_BY_ASSIGNEE_TITLE=未解決：譲受人によって
+WIDGET_UNRESOLVED_BY_ASSIGNEE_TITLE=未解決：責任者によって
 WIDGET_DUE_BUGS_TITLE=延滞のバグ
 WIDGET_MY_BUGS_TITLE=自分のバグ
 WIDGET_MY_OPEN_BUGS_TITLE=自分の未解決のバグ
@@ -40,7 +40,7 @@ FORM_FIXED_VERSIONS=修正版
 FORM_ORIGINAL_ESTIMATE=最初の見積り
 FORM_REMAIN_ESTIMATE=残りの見積もり
 FORM_ATTACHMENT=添付ファイル
-FORM_PHASE=フェーズ
+FORM_PHASE=工程
 FORM_COMMENT=コメント
 FORM_RESOLVED_DATE=解決された日付
 FORM_ANY_TEXT=概要、詳細又は環境
