@@ -1,13 +1,13 @@
-VIEW_LIST_TITLE=フェーズ
+VIEW_LIST_TITLE=工程
 VIEW_DETAIL_TITLE=フェーズの詳細
-VIEW_NO_ITEM_TITLE=この表示ではフェーズが見つかりません。
+VIEW_NO_ITEM_TITLE=この表示では工程が見つかりません。
 VIEW_NO_ITEM_HINT=リストには空いています。下のボタンをクリックし、新規を作成してください。
-BUTTON_NEW_PHASE=新規フェーズ
+BUTTON_NEW_PHASE=新規工程
 WIDGET_CLOSED_PHASE_TITLE=終了
 WIDGET_INPROGRESS_PHASE_TITLE=進行中
 WIDGET_FUTURE_PHASE_TITLE=将来
-FORM_NEW_TITLE=新規フェーズ
-FORM_EDIT_TITLE=フェーズの編集
+FORM_NEW_TITLE=新規工程
+FORM_EDIT_TITLE=工程の編集
 FORM_NAME_FIELD=名前
 FORM_START_DATE_FIELD=開始日
 FORM_END_DATE_FIELD=終了日
@@ -16,9 +16,9 @@ FORM_TASK_FIELD=タスク
 FORM_BUG_FIELD=バグ
 TAB_RELATED_TASKS=関連タスク
 TAB_RELATED_BUGS=関連のバグ
-MAIL_CREATE_ITEM_SUBJECT=[{0}]: {1} が新規フェーズ {2}を作成した
-MAIL_UPDATE_ITEM_SUBJECT=[{0}]：{1}がフェーズ{2}を更新した
-MAIL_COMMENT_ITEM_SUBJECT=[{0}]：{1}がフェーズ{2}にコメントした
-MAIL_CREATE_ITEM_HEADING={0}が新規フェーズ <b>を作成した：</b>
-MAIL_UPDATE_ITEM_HEADING={0}がフェーズ<b>を更新した：</b>
-MAIL_COMMENT_ITEM_HEADING={0}がフェーズ<b>にコメントした：</b>
+MAIL_CREATE_ITEM_SUBJECT=[{0}]: {1} が新規工程 {2}を作成した
+MAIL_UPDATE_ITEM_SUBJECT=[{0}]：{1}が工程{2}を更新した
+MAIL_COMMENT_ITEM_SUBJECT=[{0}]：{1}が工程{2}にコメントした
+MAIL_CREATE_ITEM_HEADING={0}が新規工程<b>を作成した：</b>
+MAIL_UPDATE_ITEM_HEADING={0}が工程<b>を更新した：</b>
+MAIL_COMMENT_ITEM_HEADING={0}が工程<b>にコメントした：</b>
