@@ -16,7 +16,7 @@ WIDGET_MY_PROJECTS_TITLE=有効なプロジェクト
 DIALOG_ARCHIVE_PROJECT_TITLE=プロジェクトを保存
 VIEW_DASHBOARD=ダッシュボード
 VIEW_MESSAGE=メッセージ
-VIEW_MILESTONE=フェーズ
+VIEW_MILESTONE=工程
 VIEW_TASK=タスク
 VIEW_BUG=バグ
 VIEW_FILE=ファイル
