@@ -1,5 +1,5 @@
 MESSAGE_ITEM=メッセージ
-PHASE_ITEM=フェーズ
+PHASE_ITEM=工程
 TASK_ITEM=タスク
 TASKGROUP_ITEM=タスクグループ
 BUG_ITEM=バグ
