@@ -6,7 +6,7 @@ BUTTON_BACK_TO_DASHBOARD=ダッシュボードへ戻る
 FORM_NEW_TASK_TITLE=新規タスク
 FORM_EDIT_TASK_TITLE=タスクを編集
 FORM_TASKGROUP=タスクグループ
-FORM_PHASE=フェーズ
+FORM_PHASE=工程
 FORM_COMMENT=コメント
 FORM_NOTES_ATTACHMENT=備考と添付
 FORM_TASK_NAME=タスク名
@@ -25,12 +25,12 @@ DIALOG_ASSIGN_TASKGROUP_TITLE=タスクグループ"{0}"を割り当て
 DIALOG_ASSIGN_TASK_TITLE=タスク"{0}"を割り当てる
 DIALOG_NEW_TASK_TITLE=新規タスク
 DIALOG_NEW_TASKGROUP_TITLE=新規タスクグループ
-WIDGET_UNRESOLVED_BY_ASSIGNEE_TITLE=未解決：譲受人によって
+WIDGET_UNRESOLVED_BY_ASSIGNEE_TITLE=未解決：責任者によって
 WIDGET_UNRESOLVED_BY_PRIORITY_TITLE=未解決：優先度によって
 TAB_FOLLOWERS=フォロワー
 TAB_TIME=ロギング時間
 OPT_UNDEFINED_USER=未定
-OPT_FILTER_TASK_BY_ASSIGNEE=譲受人がタスクフィルター："{0}"
+OPT_FILTER_TASK_BY_ASSIGNEE=責任者がタスクフィルター："{0}"
 MAIL_CREATE_ITEM_SUBJECT=[{0}]: {1} が 新規タスク{2}を作成した
 MAIL_UPDATE_ITEM_SUBJECT=[{0}]：{1}がタスク{2}を更新した
 MAIL_COMMENT_ITEM_SUBJECT=[{0}]：{1}がタスク{2}にコメントした
